2008-05-11  Andres G. Aragoneses <aaragoneses@novell.com> 

	* Test.Rules.Smells.mdp: Fix references.

2008-05-10  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesTest.cs, AvoidSpeculativeGeneralityTest.cs,
	AvoidCodeDuplicatedInSameClassTest.cs, AvoidLongMethodsTest.cs,
	AvoidCodeDuplicatedInSiblingClassesTest.cs: The reference for TestRunner
	class has been changed, it is placed now in Test.Rules.Helpers
	namespace.

2008-05-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongParameterListsTest.cs: Add test case with a static ctor
	and a long instance ctor.

2008-04-26  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidMessageChainsTest.cs: Added tests for check chains in the
	arguments.

2008-02-07  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidLargeClassesTest.cs: Added a test for class storing common
	constant values.

2008-02-07  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidLongMethodsTest.cs: Added a test for the new strategy for static
	constructors.

2008-02-06  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLongMethodsTest.cs: Added a test for static constructors.  This
	rule shouldn't be applied to static constructors.

2008-01-16  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesTest.cs: Added tests for skip the enums.  This rule
	shouldn't be applied to enums.

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongParameterListsTest.cs: Don't report defects for p/invokes

2008-01-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLargeClassesTest.cs: Added test cases for const and readonly 
	fields. Added test case for auto-implemented properties (C# 3)

2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidCodeDuplicatedInSameClassTest.cs: Added the test for avoid the
	error if the code stores in a class field.

2007-11-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidSpeculativeGeneralityTest.cs: Updated unit test for the new